Checking and exporting data.
This data will be use in QGIS.

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/67583881.py:1: DtypeWarning: Columns (21,23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/67583881.py:1: DtypeWarning: Columns (21,23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"../data/raw/african_conflicts.csv\", encoding=\"ISO-8859-1\")\n"
      ]
     }
@@ -699,28 +699,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3029073581.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3029073581.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['ACTOR2'].fillna('Unknown', inplace=True)\n",
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3029073581.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3029073581.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['ADMIN2'].fillna('Unknown', inplace=True)\n",
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3029073581.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3029073581.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['LOCATION'].fillna('Unknown', inplace=True)\n",
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3029073581.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3029073581.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -748,7 +748,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3772339072.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3772339072.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -832,7 +832,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/2088706453.py:2: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/2088706453.py:2: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df[\"event_date\"] = pd.to_datetime(df[\"event_date\"], errors=\"coerce\")\n"
      ]
     }
@@ -1281,7 +1281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/3039830590.py:4: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/3039830590.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1319,7 +1319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/418306813.py:5: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/418306813.py:5: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=None` for the same effect.\n",
       "\n",
@@ -1460,16 +1460,16 @@
       "Length: 13\n",
       "Categories (13, object): ['Battle-Government regains territory', 'Battle-No change of territory', 'Battle-Non-state actor overtakes territory', 'Battle-no change of territory', ..., 'Strategic Development', 'Strategic development', 'Violence Against Civilians', 'Violence against civilians']\n",
       "                           EVENT_TYPE\n",
-      "159614          Strategic development\n",
-      "129890     Violence against civilians\n",
-      "7211    Battle-No change of territory\n",
-      "3154                   Riots/Protests\n",
-      "107035  Battle-No change of territory\n",
-      "154795     Violence against civilians\n",
-      "131887                 Riots/Protests\n",
-      "13222                  Riots/Protests\n",
-      "151491                 Riots/Protests\n",
-      "121982                 Riots/Protests\n"
+      "122632                Remote violence\n",
+      "78120                  Riots/Protests\n",
+      "105308                 Riots/Protests\n",
+      "14742                  Riots/Protests\n",
+      "20875      Violence against civilians\n",
+      "148886                 Riots/Protests\n",
+      "109065  Battle-No change of territory\n",
+      "98503   Battle-No change of territory\n",
+      "25313   Battle-No change of territory\n",
+      "57177                 Remote violence\n"
      ]
     }
    ],
@@ -1685,7 +1685,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/991486771.py:5: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/991486771.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1724,7 +1724,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/834121380.py:5: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/834121380.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1794,7 +1794,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_34079/2826682087.py:3: FutureWarning: \n",
+      "/var/folders/gg/y7njvgln6bd7wj2ygfmd_r580000gn/T/ipykernel_44059/2826682087.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1833,6 +1833,278 @@
     "#TEST OF VIZ \n",
     "\n",
     "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#I will be using the data and exporting it to use in QGIS. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EVENT_DATE</th>\n",
+       "      <th>FATALITIES</th>\n",
+       "      <th>GEO_PRECISION</th>\n",
+       "      <th>GWNO</th>\n",
+       "      <th>INTER1</th>\n",
+       "      <th>INTER2</th>\n",
+       "      <th>INTERACTION</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>TIME_PRECISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>165808</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165806.000000</td>\n",
+       "      <td>165797.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "      <td>165808.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2011-03-26 18:33:14.711955968</td>\n",
+       "      <td>4.420257</td>\n",
+       "      <td>1.261061</td>\n",
+       "      <td>538.296964</td>\n",
+       "      <td>3.385500</td>\n",
+       "      <td>3.193603</td>\n",
+       "      <td>32.001604</td>\n",
+       "      <td>5.456231</td>\n",
+       "      <td>24.472984</td>\n",
+       "      <td>1.138751</td>\n",
+       "      <td>2010.760898</td>\n",
+       "      <td>6.199339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1997-01-01 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>404.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>-34.710100</td>\n",
+       "      <td>-17.464600</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1997.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2007-10-22 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>-1.326100</td>\n",
+       "      <td>13.614610</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2007.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2013-08-03 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>520.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>4.878300</td>\n",
+       "      <td>29.233900</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2016-01-06 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>615.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>12.055600</td>\n",
+       "      <td>34.060000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2017-07-29 00:00:00</td>\n",
+       "      <td>25000.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>651.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>37.274420</td>\n",
+       "      <td>51.266800</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>76.071441</td>\n",
+       "      <td>0.524248</td>\n",
+       "      <td>61.974200</td>\n",
+       "      <td>2.033114</td>\n",
+       "      <td>2.920635</td>\n",
+       "      <td>18.284381</td>\n",
+       "      <td>16.366091</td>\n",
+       "      <td>15.962719</td>\n",
+       "      <td>0.441038</td>\n",
+       "      <td>5.897476</td>\n",
+       "      <td>3.413492</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          EVENT_DATE     FATALITIES  GEO_PRECISION  \\\n",
+       "count                         165808  165808.000000  165808.000000   \n",
+       "mean   2011-03-26 18:33:14.711955968       4.420257       1.261061   \n",
+       "min              1997-01-01 00:00:00       0.000000       1.000000   \n",
+       "25%              2007-10-22 00:00:00       0.000000       1.000000   \n",
+       "50%              2013-08-03 00:00:00       0.000000       1.000000   \n",
+       "75%              2016-01-06 00:00:00       1.000000       1.000000   \n",
+       "max              2017-07-29 00:00:00   25000.000000       3.000000   \n",
+       "std                              NaN      76.071441       0.524248   \n",
+       "\n",
+       "                GWNO         INTER1         INTER2    INTERACTION  \\\n",
+       "count  165808.000000  165808.000000  165808.000000  165808.000000   \n",
+       "mean      538.296964       3.385500       3.193603      32.001604   \n",
+       "min       404.000000       1.000000       0.000000      10.000000   \n",
+       "25%       490.000000       1.000000       0.000000      15.000000   \n",
+       "50%       520.000000       3.000000       2.000000      28.000000   \n",
+       "75%       615.000000       5.000000       7.000000      47.000000   \n",
+       "max       651.000000       8.000000       8.000000      88.000000   \n",
+       "std        61.974200       2.033114       2.920635      18.284381   \n",
+       "\n",
+       "            LATITUDE      LONGITUDE  TIME_PRECISION           YEAR  \\\n",
+       "count  165806.000000  165797.000000   165808.000000  165808.000000   \n",
+       "mean        5.456231      24.472984        1.138751    2010.760898   \n",
+       "min       -34.710100     -17.464600        1.000000    1997.000000   \n",
+       "25%        -1.326100      13.614610        1.000000    2007.000000   \n",
+       "50%         4.878300      29.233900        1.000000    2013.000000   \n",
+       "75%        12.055600      34.060000        1.000000    2016.000000   \n",
+       "max        37.274420      51.266800        3.000000    2017.000000   \n",
+       "std        16.366091      15.962719        0.441038       5.897476   \n",
+       "\n",
+       "               MONTH  \n",
+       "count  165808.000000  \n",
+       "mean        6.199339  \n",
+       "min         1.000000  \n",
+       "25%         3.000000  \n",
+       "50%         6.000000  \n",
+       "75%         9.000000  \n",
+       "max        12.000000  \n",
+       "std         3.413492  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory '../data/processed' is ready.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Define the directory path\n",
+    "processed_dir = \"../data/processed\"\n",
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(processed_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"Directory '{processed_dir}' is ready.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved to: ../data/processed/african_conflicts_cleaned.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "export_path = \"../data/processed/african_conflicts_cleaned.csv\"\n",
+    "\n",
+    "# Save as a CSV file\n",
+    "df.to_csv(export_path, index=False)\n",
+    "\n",
+    "print(f\"Cleaned dataset saved to: {export_path}\")\n"
    ]
   },
   {
